--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Jul 07 16:06:11 BRT 2024
+#Mon Jul 08 18:09:20 UTC 2024
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -63,4 +63,4 @@ sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
 view-distance=10
-white-list=false
+white-list=true
