--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun May 25 12:06:10 GMT-03:00 2025
+#Mon Jun 02 20:28:22 BRT 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
